--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
       .animate-fade-in-up {
         animation: fadeInUp 0.5s ease-out forwards;
       }
+      @keyframes fadeInUpZoom {
+        0% { opacity: 0; transform: translateY(15px) scale(0.96); }
+        100% { opacity: 1; transform: translateY(0) scale(1); }
+      }
+      .animate-fade-in-up-zoom {
+        animation: fadeInUpZoom 0.7s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
       .animate-spin-slow {
         animation: spin 3s linear infinite;
       }
